Cabal-version:  2.2

name:           blockfrost-api
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      BlockfrostAPI
      BlockfrostAPI.Operations.Get_
      BlockfrostAPI.Operations.GetAccountsStakeAddress_
      BlockfrostAPI.Operations.GetAccountsStakeAddressAddresses
      BlockfrostAPI.Operations.GetAccountsStakeAddressAddressesAssets
      BlockfrostAPI.Operations.GetAccountsStakeAddressDelegations
      BlockfrostAPI.Operations.GetAccountsStakeAddressHistory
      BlockfrostAPI.Operations.GetAccountsStakeAddressMirs
      BlockfrostAPI.Operations.GetAccountsStakeAddressRegistrations
      BlockfrostAPI.Operations.GetAccountsStakeAddressRewards
      BlockfrostAPI.Operations.GetAccountsStakeAddressWithdrawals
      BlockfrostAPI.Operations.GetAddressesAddress_
      BlockfrostAPI.Operations.GetAddressesAddressTotal
      BlockfrostAPI.Operations.GetAddressesAddressTransactions
      BlockfrostAPI.Operations.GetAddressesAddressTxs
      BlockfrostAPI.Operations.GetAddressesAddressUtxos
      BlockfrostAPI.Operations.GetAssets
      BlockfrostAPI.Operations.GetAssetsPolicyPolicyId_
      BlockfrostAPI.Operations.GetAssetsAsset_
      BlockfrostAPI.Operations.GetAssetsAssetAddresses
      BlockfrostAPI.Operations.GetAssetsAssetHistory
      BlockfrostAPI.Operations.GetAssetsAssetTransactions
      BlockfrostAPI.Operations.GetAssetsAssetTxs
      BlockfrostAPI.Operations.GetBlocksEpochEpochNumberSlotSlotNumber_
      BlockfrostAPI.Operations.GetBlocksLatest
      BlockfrostAPI.Operations.GetBlocksLatestTxs
      BlockfrostAPI.Operations.GetBlocksSlotSlotNumber_
      BlockfrostAPI.Operations.GetBlocksHashOrNumber_
      BlockfrostAPI.Operations.GetBlocksHashOrNumberNext
      BlockfrostAPI.Operations.GetBlocksHashOrNumberPrevious
      BlockfrostAPI.Operations.GetBlocksHashOrNumberTxs
      BlockfrostAPI.Operations.GetEpochsLatest
      BlockfrostAPI.Operations.GetEpochsLatestParameters
      BlockfrostAPI.Operations.GetEpochsNumber_
      BlockfrostAPI.Operations.GetEpochsNumberBlocks
      BlockfrostAPI.Operations.GetEpochsNumberBlocksPoolId_
      BlockfrostAPI.Operations.GetEpochsNumberNext
      BlockfrostAPI.Operations.GetEpochsNumberParameters
      BlockfrostAPI.Operations.GetEpochsNumberPrevious
      BlockfrostAPI.Operations.GetEpochsNumberStakes
      BlockfrostAPI.Operations.GetEpochsNumberStakesPoolId_
      BlockfrostAPI.Operations.GetGenesis
      BlockfrostAPI.Operations.GetHealth
      BlockfrostAPI.Operations.GetHealthClock
      BlockfrostAPI.Operations.PostIpfsAdd
      BlockfrostAPI.Operations.GetIpfsGatewayIPFSPath_
      BlockfrostAPI.Operations.PostIpfsPinAddIPFSPath_
      BlockfrostAPI.Operations.GetIpfsPinList_
      BlockfrostAPI.Operations.GetIpfsPinListIPFSPath_
      BlockfrostAPI.Operations.PostIpfsPinRemoveIPFSPath_
      BlockfrostAPI.Operations.GetMetadataTxsLabels
      BlockfrostAPI.Operations.GetMetadataTxsLabelsLabel_
      BlockfrostAPI.Operations.GetMetadataTxsLabelsLabelCbor
      BlockfrostAPI.Operations.GetMetrics_
      BlockfrostAPI.Operations.GetMetricsEndpoints
      BlockfrostAPI.Operations.GetNutlinkTickersTicker_
      BlockfrostAPI.Operations.GetNutlinkAddress_
      BlockfrostAPI.Operations.GetNutlinkAddressTickers
      BlockfrostAPI.Operations.GetNutlinkAddressTickersTicker_
      BlockfrostAPI.Operations.GetPools
      BlockfrostAPI.Operations.GetPoolsRetired
      BlockfrostAPI.Operations.GetPoolsRetiring
      BlockfrostAPI.Operations.GetPoolsPoolId_
      BlockfrostAPI.Operations.GetPoolsPoolIdBlocks
      BlockfrostAPI.Operations.GetPoolsPoolIdDelegators
      BlockfrostAPI.Operations.GetPoolsPoolIdHistory
      BlockfrostAPI.Operations.GetPoolsPoolIdMetadata
      BlockfrostAPI.Operations.GetPoolsPoolIdRelays
      BlockfrostAPI.Operations.GetPoolsPoolIdUpdates
      BlockfrostAPI.Operations.PostTxSubmit
      BlockfrostAPI.Operations.GetTxsHash_
      BlockfrostAPI.Operations.GetTxsHashDelegations
      BlockfrostAPI.Operations.GetTxsHashMetadata
      BlockfrostAPI.Operations.GetTxsHashMetadataCbor
      BlockfrostAPI.Operations.GetTxsHashMirs
      BlockfrostAPI.Operations.GetTxsHashPoolRetires
      BlockfrostAPI.Operations.GetTxsHashPoolUpdates
      BlockfrostAPI.Operations.GetTxsHashStakes
      BlockfrostAPI.Operations.GetTxsHashUtxos
      BlockfrostAPI.Operations.GetTxsHashWithdrawals
      BlockfrostAPI.Types
      BlockfrostAPI.TypeAlias
      BlockfrostAPI.Types.AccountAddressesAsset
      BlockfrostAPI.Types.AccountAddressesContent
      BlockfrostAPI.Types.AccountContent
      BlockfrostAPI.Types.AccountDelegationContent
      BlockfrostAPI.Types.AccountHistoryContent
      BlockfrostAPI.Types.AccountMirContent
      BlockfrostAPI.Types.AccountRegistrationContent
      BlockfrostAPI.Types.AccountRewardContent
      BlockfrostAPI.Types.AccountWithdrawalContent
      BlockfrostAPI.Types.AddressContent
      BlockfrostAPI.Types.AddressContentTotal
      BlockfrostAPI.Types.AddressTransactionsContent
      BlockfrostAPI.Types.AddressUtxoContent
      BlockfrostAPI.Types.Asset
      BlockfrostAPI.Types.AssetAddress
      BlockfrostAPI.Types.AssetHistory
      BlockfrostAPI.Types.AssetPolicy
      BlockfrostAPI.Types.AssetTransaction
      BlockfrostAPI.Types.BlockContent
      BlockfrostAPI.Types.EpochContent
      BlockfrostAPI.Types.EpochParamContent
      BlockfrostAPI.Types.EpochStakeContent
      BlockfrostAPI.Types.EpochStakePoolContent
      BlockfrostAPI.Types.GenesisContent
      BlockfrostAPI.Types.Metric
      BlockfrostAPI.Types.MetricsEndpoint
      BlockfrostAPI.Types.NutlinkAddress
      BlockfrostAPI.Types.NutlinkAddressTicker
      BlockfrostAPI.Types.NutlinkAddressTickerTicker
      BlockfrostAPI.Types.NutlinkTickersTicker
      BlockfrostAPI.Types.Pool
      BlockfrostAPI.Types.PoolDelegator
      BlockfrostAPI.Types.PoolHistory
      BlockfrostAPI.Types.PoolMetadata
      BlockfrostAPI.Types.PoolRelay
      BlockfrostAPI.Types.PoolRetiring
      BlockfrostAPI.Types.PoolUpdate
      BlockfrostAPI.Types.ShortAsset
      BlockfrostAPI.Types.TxContent
      BlockfrostAPI.Types.TxContentDelegation
      BlockfrostAPI.Types.TxContentMetadataCborItem
      BlockfrostAPI.Types.TxContentMetadataItem
      BlockfrostAPI.Types.TxContentMir
      BlockfrostAPI.Types.TxContentPoolCert
      BlockfrostAPI.Types.TxContentPoolRetiring
      BlockfrostAPI.Types.TxContentStakeAddress
      BlockfrostAPI.Types.TxContentUtxo
      BlockfrostAPI.Types.TxContentWithdrawals
      BlockfrostAPI.Types.TxMetadataLabelCbor
      BlockfrostAPI.Types.TxMetadataLabelJson
      BlockfrostAPI.Types.TxMetadataLabels
      BlockfrostAPI.Configuration
      BlockfrostAPI.SecuritySchemes
      BlockfrostAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
